--- a/server/package.json
+++ b/server/package.json
@@ -4,6 +4,9 @@
   "description": "User Management App",
   "main": "app.js",
   "type": "module",
+  "engines": {
+    "node": ">=16.0.0"
+  },
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "start": "node app.js",
